fixed overflow and image support

--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -359,6 +359,7 @@ ol li img {
     font-size: 2em;
     display: block;
     margin-bottom: 20px;
+    overflow: hidden;
 }
 
 .message a:hover {
